--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
 			<version>8.0.33</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
