--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/shop_jpa
+spring.datasource.username=root
+spring.datasource.password=55555
+spring.jpa.hibernate.ddl-auto=none
